Revert "Fixed map sizing on firefox"
This reverts commit 3fe1ed2b58eff7be3c4eb6606b4972756c161a6d.

--- a/src/components/standalone/ArrowMap/styles.scss
+++ b/src/components/standalone/ArrowMap/styles.scss
@@ -7,6 +7,6 @@
   grid-column: 1;
   z-index: 2;
   width: 100%;
-  height: 550px;
+  height: 100%;
   cursor: col-resize;
 }
